Add EXDATA to X509_LOOKUP

--- a/doc/man3/BIO_get_ex_new_index.pod
+++ b/doc/man3/BIO_get_ex_new_index.pod
@@ -19,6 +19,8 @@ SSL_CTX_set_app_data, SSL_CTX_get_app_data,
 SSL_SESSION_get_ex_new_index, SSL_SESSION_set_ex_data, SSL_SESSION_get_ex_data,
 SSL_SESSION_set_app_data, SSL_SESSION_get_app_data,
 UI_get_ex_new_index, UI_set_ex_data, UI_get_ex_data,
+X509_LOOKUP_set_app_data, X509_LOOKUP_get_app_data,
+X509_LOOKUP_get_ex_new_index, X509_LOOKUP_set_ex_data, X509_LOOKUP_get_ex_data,
 UI_set_app_data, UI_get_app_data,
 X509_STORE_CTX_get_ex_new_index, X509_STORE_CTX_set_ex_data, X509_STORE_CTX_get_ex_data,
 X509_STORE_CTX_set_app_data, X509_STORE_CTX_get_app_data,
