fixup! Consolidate doc of BIO_do_connect() and its alias BIO_do_handshake()
further improve wording according to review

--- a/doc/man3/BIO_f_ssl.pod
+++ b/doc/man3/BIO_f_ssl.pod
@@ -98,7 +98,8 @@ pointer.
 BIO_do_handshake() attempts to complete an SSL handshake on the
 -supplied BIO and establish the SSL connection.
 For non-SSL BIOs the connection is done typically at TCP level.
-If domain name resolution yields multiple IP addresses all of them are tried.
+If domain name resolution yields multiple IP addresses all of them are tried
+after connect() failures.
 The function returns 1 if the connection was established successfully.
 A zero or negative value is returned if the connection could not be established.
 The call BIO_should_retry() should be used for non-blocking connect BIOs
